# src/models/leaderboard.model.js
@@ -2,7 +2,29 @@ const mongoose = require('mongoose');
 
 const leaderboardSchema = new mongoose.Schema(
   {
-    // Schema placeholder for Leaderboard
+    student: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: 'Student',
+      required: true,
+      unique: true
+    },
+    rank: {
+      type: Number,
+      required: true
+    },
+    creditScore: {
+      type: Number,
+      required: true,
+      default: 0
+    },
+    totalProjectsCompleted: {
+      type: Number,
+      default: 0
+    },
+    totalAssignmentsCompleted: {
+      type: Number,
+      default: 0
+    }
   },
   {
     timestamps: true
